# lena

./: LICENSE  README.md
lena-ide/: CMakeLists.txt  shell.nix
lena-ide/include/: lena_ide.h
lena-ide/src/: main.cpp
lena-interpreter/: meson.build  shell.nix
lena-interpreter/example_libraries/lib1/: lib1.c  makefile
lena-interpreter/include/: lena.h  shlibload.h
lena-interpreter/native/Linux/: shlibload.c
lena-interpreter/src/: main.c
